fix(DatePicker): Keep the selection visible in forced colours mode

--- a/packages/css/src/components/date-picker/date-picker.scss
+++ b/packages/css/src/components/date-picker/date-picker.scss
@@ -71,6 +71,15 @@
   &:hover {
     background-color: var(--ams-date-picker-day-selected-hover-background-color);
   }
+
+  @media (forced-colors: active) {
+    &,
+    & *,
+    &:hover {
+      background-color: Highlight;
+      color: HighlightText;
+    }
+  }
 }
 
 .ams-date-picker__day[aria-disabled="true"] {
